fixed student and skills association